--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
           </p>
 
           <p>
-            I believe that great backend development is about creating solutions that are not only functional but also scalable and robust. I take pride in writing clean, efficient code that solves complex problems effectively. My aim is to build systems that work reliably while being easy to maintain and extend over time.
+            I believe that great backend development is about creating solutions that are not only functional but also scalable and robust. I take pride in writing clean, efficient code that solves complex problems effectively. My aim is to build systems that work reliably while being easy to maintain and extend over time.I also dabble in sketching. You can see my drawings in the "sketching" tab above.
+            
           </p>
         </section>
 
